src/k8s/01-deploy-front.yaml
# https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/deployment-v1/

apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  namespace: default

# https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/deployment-v1/#DeploymentSpec
spec:
  replicas: 1

  # https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/#label-selectors
  # https://kubernetes.io/docs/reference/kubernetes-api/common-definitions/label-selector/#LabelSelector
  selector:
    matchLabels:
      name: front-pod

  # https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-template-v1/#PodTemplate
  template:

    # https://kubernetes.io/docs/reference/kubernetes-api/common-definitions/object-meta/#ObjectMeta
    metadata:

      # https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
      labels: # Todas las etiquetas son privadas, por la falta de prefijo.
        name: front-pod
        tier: frontend

    # https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#PodSpec
    spec:

      # https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#Container
      containers:
      - name: front-container
        image: franguerra27/sip-frontend:0.20260917.1
        imagePullPolicy: Always
      tolerations:
      - key: instance_type
        operator: Equal
        value: spot
        effect: NoSchedule
