src/k8s/debug.yaml
# Container para depurar.

apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
  - name: debug-container
    image: alpine
    command: [ "/bin/sh", "-c" ]
    args: [ "apk update && apk add iputils busybox-extras curl && sleep infinity" ]
    securityContext:
      runAsUser: 0
