src/k8s/02-service-front.yaml
# https://kubernetes.io/docs/reference/kubernetes-api/service-resources/service-v1/

apiVersion: v1
kind: Service
metadata:
  name: front-service

# https://kubernetes.io/docs/reference/kubernetes-api/service-resources/service-v1/#ServiceSpec
spec:
  type: LoadBalancer
  selector:
    name: front-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  - name: HTTPS
    port: 443
    targetPort: 80
  tls:
    - secretName: front-lb-tls-cert
