src/k8s/04-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-lb
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  selector:
    app: nginx-ingress
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
