src/k8s/service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicio-frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
