src/k8s/03-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# https://kubernetes.io/docs/reference/kubernetes-api/service-resources/ingress-v1/

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: main-ingress
# spec:
#   tls:
#   - hosts:
#     - spgda.fl.com.ar
#     secretName: front-lb-tls-cert
#   rules:
#   - host: spgda.fl.com.ar
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: service1
#             port:
#               number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:

  # # https://kubernetes.io/docs/reference/kubernetes-api/service-resources/ingress-v1/#IngressBackend
  # defaultBackend:
  #   service:
  #     name: front-service
  #     port:
  #       number: 80

  rules:
    - host: fl.com.ar
      http:
        paths:
          - path: /
            pathType: Prefix

            # https://kubernetes.io/docs/reference/kubernetes-api/service-resources/ingress-v1/#IngressBackend
            backend:
              service:
                name: front-service
                port:
                  number: 80
