src/k8s/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# https://kubernetes.io/docs/reference/kubernetes-api/service-resources/ingress-v1/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_headers "X-Robots-Tag: noindex, nofollow";
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, OPTIONS, POST"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:

  # # https://kubernetes.io/docs/reference/kubernetes-api/service-resources/ingress-v1/#IngressBackend 
  # defaultBackend:
  #   service:
  #     name: front-service
  #     port:
  #       number: 80

  rules:
    - host: fl.com.ar
      http:
        paths:
          - path: /
            pathType: Prefix

            # https://kubernetes.io/docs/reference/kubernetes-api/service-resources/ingress-v1/#IngressBackend
            backend:
              service:
                name: front-service
                port:
                  number: 80
